--- a/next-shadcn-rtl/package.json
+++ b/next-shadcn-rtl/package.json
@@ -13,6 +13,13 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@embedpdf/core": "^2.6.0",
+    "@embedpdf/engines": "^2.6.0",
+    "@embedpdf/plugin-document-manager": "^2.6.0",
+    "@embedpdf/plugin-render": "^2.6.0",
+    "@embedpdf/plugin-scroll": "^2.6.0",
+    "@embedpdf/plugin-viewport": "^2.6.0",
+    "@embedpdf/react-pdf-viewer": "^2.6.0",
     "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
